<resources>
    <string name="app_name">NGLabornetzgeraet</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_settings">Einstellungen</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="general_power_supply_settings">Allgemeine Netzgerät Einstellungen</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Name</string>
    <string name="pref_default_display_name">Netzgerät</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="server_settings">Server Einstellungen</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="power_supply_wifi_settings">Netzgerät WLAN</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Einstellungen</string>
    <string name="connecting">Verbinden...</string>
    <string name="connecting_str">Verbinden...</string>
    <string name="no_wireless_warning">Aktiviere WLAN/Bluetooth um dich mit einem Netzgerät zu verbinden</string>
    <string name="heading">Wähle ein Netzgerät</string>
    <string name="channel_2">Kanal 2</string>
    <string name="channel_1">Kanal 1</string>
    <string name="example_current_channel_2">1.0 A</string>
    <string name="example_current_channel_1">3.3 A</string>
    <string name="example_voltage_channel_1">12.3 V</string>
    <string name="example_voltage_channel_2">2.0 V</string>
    <string name="connected_string">Verbunden</string>
    <string name="live_data_content">Leistung: \nSpannung: \nStrom:</string>
    <string name="password">Passwort</string>
    <string name="app_settings">App Einstellungen</string>
    <string name="firmware_information">Firmware Informationen</string>
    <string name="app_versioninformation">App Versionsinformationen</string>
    <string name="server_ip">Server IP</string>
    <string name="server_ip_not_set">not set</string>
    <string name="server_password">Server Passwort</string>
    <string name="remember_passwords">Passwörter merken</string>
    <string name="reset">Werkseinstellungen zurücksetzen</string>
    <string name="version">Version</string>
    <string name="current_version">1.0.0</string>
    <string name="date">Datum</string>
    <string name="publish_date">31.12.2999</string>
</resources>
