<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="advancedtech.nglabornetzgeraet.Settings$GeneralPreferenceFragment"
        android:title="@string/general_power_supply_settings" />

    <header
        android:fragment="advancedtech.nglabornetzgeraet.Settings$PowerSupplyWIFIPreference"
        android:title="@string/power_supply_wifi_settings" />

    <header
        android:fragment="advancedtech.nglabornetzgeraet.Settings$ServerPreferenceFragment"
        android:title="@string/server_settings" />

    <header
        android:fragment="advancedtech.nglabornetzgeraet.Settings$AppPreferenceFragment"
        android:title="@string/app_settings" />

    <header
        android:fragment="advancedtech.nglabornetzgeraet.Settings$FimrwareInformation"
        android:title="@string/firmware_information" />

    <header
        android:fragment="advancedtech.nglabornetzgeraet.Settings$AppVersion"
        android:title="@string/app_versioninformation" />



</preference-headers>
